--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
-    "react": "^16.2.0",
+    "react": "^15.5.4",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^15.5.4",
     "style-loader": "0.19.0",
     "styled-components": "^1.4.5",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -98,7 +98,10 @@
   },
   "devDependencies": {
     "chokidar": "^1.6.1",
+    "enzyme": "^2.8.2",
     "npm-run-all": "^4.0.2",
-    "react-docgen": "^2.14.0"
+    "react-addons-test-utils": "^15.5.1",
+    "react-docgen": "^2.14.0",
+    "react-test-renderer": "^15.5.4"
   }
 }
