--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
 {
-  "name": "doc-generator",
+  "name": "components-react-SamSteele01",
   "version": "0.1.0",
-  "private": true,
+  "main": "./lib/index.js",
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "author": {
+    "name": "Sam Steele",
+    "email": "ssteele017@gmail.com",
+    "url": "samsteele-portfolio-v1.herokuapp.com"
+  },
+  "files": ["lib"],
+  "keywords": [
+    "components",
+    "react",
+    "react-component",
+    "toolkit"
+  ],
   "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "styled-components": "^1.4.5"
+  },
+  "devDependencies": {
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -11,6 +31,17 @@
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "babel-cli": "^6.24.1",
+    "chokidar": "^1.6.1",
+    "cpx": "^1.5.0",
+    "cross-env": "^4.0.0",
+    "enzyme": "^2.8.2",
+    "gh-pages": "^0.12.0",
+    "npm-run-all": "^4.0.2",
+    "react-addons-test-utils": "^15.5.1",
+    "react-docgen": "^2.14.0",
+    "react-test-renderer": "^15.5.4",
+    "rimraf": "^2.6.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
@@ -33,11 +64,8 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.0",
     "raf": "3.4.0",
-    "react": "^15.5.4",
     "react-dev-utils": "^4.2.1",
-    "react-dom": "^15.5.4",
     "style-loader": "0.19.0",
-    "styled-components": "^1.4.5",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -54,8 +82,13 @@
     "gen:docs-watch": "npm run gen:docs -- --watch",
     "build:docs": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
+    "build:css": "cpx \"./src/components/**/*.css\" ./lib",
+    "prebuild:lib": "rimraf lib",
+    "build:lib": "npm run build:commonjs && npm run build:css",
     "predeploy:docs": "npm run build:docs",
-    "deploy:docs": "gh-pages -d build"
+    "deploy:docs": "gh-pages -d build",
+    "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore spec.js",
+    "prepublish": "npm run build:lib"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -93,19 +126,16 @@
   },
   "babel": {
     "presets": [
+      [
+        "env",
+        {
+          "modules": "commonjs"
+        }
+      ],
       "react-app"
     ]
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "devDependencies": {
-    "chokidar": "^1.6.1",
-    "enzyme": "^2.8.2",
-    "gh-pages": "^0.12.0",
-    "npm-run-all": "^4.0.2",
-    "react-addons-test-utils": "^15.5.1",
-    "react-docgen": "^2.14.0",
-    "react-test-renderer": "^15.5.4"
   }
 }
