--- a/package.json
+++ b/package.json
@@ -2,22 +2,25 @@
   "name": "components-react-samsteele",
   "version": "0.1.0",
   "main": "./lib/index.js",
+  "private": true,
   "engines": {
     "node": ">=4.0.0"
   },
   "author": {
     "name": "Sam Steele",
     "email": "ssteele017@gmail.com",
-    "url": "samsteele-portfolio-v1.herokuapp.com"
+    "url": "http://samsteele-portfolio-v1.herokuapp.com"
   },
   "files": ["lib"],
   "keywords": [
     "components",
     "react",
     "react-component",
-    "toolkit"
+    "toolkit",
+    "pluralsight"
   ],
   "dependencies": {
+    "highlight.js": "^9.10.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "styled-components": "^1.4.5"
@@ -55,7 +58,6 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
-    "highlight.js": "^9.10.0",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -85,6 +87,7 @@
     "build:css": "cpx \"./src/components/**/*.css\" ./lib",
     "prebuild:lib": "rimraf lib",
     "build:lib": "npm run build:commonjs && npm run build:css",
+    "build:copy-files": "node scripts/copyBuildFiles.js",
     "predeploy:docs": "npm run build:docs",
     "deploy:docs": "gh-pages -d build",
     "build:commonjs": "cross-env NODE_ENV=production babel ./src/components --out-dir ./lib --ignore spec.js",
